[workspace]
members = [
  "async",
  "adler32",
  "base58",
  "atom",
  "bon",
  "data_view",
  "gray",
  "guid",
  "guid64",
  "handler",
  "hash",
  "heap",
  "lru",
  "idtree",
  "res",
  "ordmap",
  "rsync",
  "sinfo",
  "slab",
  "time",
  "timer",
  "ucd",
  "util",
  "wheel",
  "wtree",
  "deque",
  "lfstack",
  "dyn_uint",
  "task_pool",
  "apm",
  "file",
  "worker",
  "future",
  "enum_default_macro",
  "pointer",
  "map",
  "ecs",
  "ecs_derive",
  "listener",
  "debug_info",
  "any",
  "dirty",
  "compress",
  "hashmap",
  "share",
  "fx_hashmap",
  "densevec",
  "bincode",
  "local_timer",
  "async_file",
  "flex_layout",
  "js_proxy_gen",
  "js_proxy_gen_macro",
  "cross_performance",
  "null",
  "static_map",
]