[workspace]
members = [
  "async",
  "async_macro",
  "adler32",
  "base58",
  "atom",
  "bon",
  "data_view",
  "gray",
  "guid",
  "guid64",
  "handler",
  "hash",
  "heap",
  "lru",
  "idtree",
  "res",
  "ordmap",
  "rsync",
  "sinfo",
  "slab",
  "time",
  "ucd",
  "util",
  "timer",
  "cancel_timer",
  "wheel",
  "slot_wheel",
  "wtree",
  "deque",
  "lfstack",
  "dyn_uint",
  "apm",
  "file",
  "future",
  "enum_default_macro",
  "pointer",
  "map",
  "ecs",
  "ecs_derive",
  "listener",
  "debug_info",
  "any",
  "dirty",
  "compress",
  "hashmap",
  "share",
  "fx_hashmap",
  "densevec",
  "bincode",
  "local_timer",
  "async_file",
  "flex_layout",
  "js_proxy_gen",
  "js_proxy_gen_macro",
  "cross_performance",
  "null",
  "static_map",
  "ext_heap",
  "weight",
  "wy_rng",
  "wy_hash",
  "slot_deque",
  "weight_task",
  "res_mgr",
  "slab_new",
  "map_new",
  "flex_layout_new",
  "idtree_new",
  "hash_value",
  "graph",
  "async_graph",
]