[package]
name = "apm"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[dependencies]
fnv = "1.0"
sysinfo = "0.9"
netstat = "0.7"
backtrace = "0.3"
lazy_static = "1.3"
parking_lot = "0.7"
crossbeam-queue = "0.1"
atom = { path = "../../pi_lib/atom" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
psutil = "1.6"
walkdir = "2.2"