[package]
name = "apm"
version = "0.1.1"
authors = ["vmos <vmos@fairblock.io>"]

[dependencies]
fnv = "1.0"
sysinfo = "0.27"
netstat2 = "0.9"
backtrace = "0.3"
lazy_static = "1.4"
parking_lot = "0.12"
crossbeam-queue = "0.1"
pi_atom = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
psutil = "1.7"
walkdir = "2.2"