[package]
name = "pi_async"
version = "0.2.0"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"
description = "Based on future (MVP), a universal asynchronous runtime and tool used to provide a foundation for the outside world"
repository = "https://github.com/GaiaWorld/pi_async.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async"]

[dependencies]
libc = "0.2"
futures = "0.3"
async-stream = "0.3"
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-queue = "0.3"
flume = "0.10"
parking_lot = "0.11"
num_cpus = "1.13"
log = "0.4"
minstant = "0.1"
pi_hash = "0.1"
pi_local_timer = "0.1"

[dev-dependencies]
rand = "0.7"
future-parking_lot = "0.3"
futures-util = "0.3"
tokio = { version = "1.6", features = ["full"] }
async-stream = "0.3"
twox-hash = "1.5"
dashmap = "3.11"
env_logger = "0.7"