[package]
name = "pi_async_file"
version = "0.1.6"
authors = ["zuon<zuon@yinengyun.com>"]
edition = "2018"
description = "A async file tools library."
repository = "https://github.com/GaiaWorld/pi_async_file"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async", "future", "file", "fs"]

[dependencies]
parking_lot = "0.11"
pi_async = "0.1"