[package]
name = "pi_async_macro"
version = "0.1.1"
authors = ["zuon<zuon@yinengyun.com>"]
edition = "2018"
description = "A async file macros tools."
repository = "https://github.com/GaiaWorld/pi_async_macro"
license = "MIT OR Apache-2.0"
keywords = ["pi", "async", "future", "macro", "macros"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
num_cpus = "1.13"