[package]
name = "atom"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[dependencies]
fnv = "1.0.6"
lazy_static = "*"
bon = {path="../bon"}
time = {path="../time"}
share = {path = "../share"}
hash = {path="../hash", features = ["xxhash"]}

[dependencies.serde]
version = "1.0"
features = ["serde_derive"]
optional = true

[features]
default = []
arc = ["share/arc"]
