[package]
name = "ecs"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2018"

[dependencies]
slab = {path="../slab"}
atom = {path="../atom"}
map = {path="../map"}
any = {path="../any"}
pointer = {path="../pointer"}
listener = {path="../listener"}
hash = {path="../hash"}
time = {path="../time"}
share = {path="../share"}
paste = "0.1"
lazy_static = "*"
# im = "*"
# [target.'cfg(feature = "wasm-bindgen")'.dependencies]
# wasm_bindgen_cross_performance = { package = "cross_performance", path = "../cross_performance", features=["wasm-bindgen"], optional = true }

# [target.'cfg(feature = "native")'.dependencies]
# native_cross_performance = { package = "cross_performance", path = "../cross_performance", features=["native"], optional = true }

[features]
defualt = ["runtime"]
runtime = []
# wasm-bindgen = ["wasm_bindgen_cross_performance"]
# native = ["native_cross_performance"]

[[example]]
name = "expanded"

[[example]]
name = "basic"



