[package]
name = "ecs"
version = "0.1.0"
authors = ["suncy <suncy@gmail.com>"]
edition = "2018"

[dependencies]
slab = {path="../slab"}
atom = {path="../atom"}
map = {path="../map"}
any = {path="../any"}
pointer = {path="../pointer"}
listener = {path="../listener"}
hash = {path="../hash"}
time = {path="../time"}
share = {path="../share"}
debug_info = {path="../debug_info"}
paste = "0.1"
lazy_static = "*"
# im = "*"

# [dependencies.web-sys]
# version = "*"
# features = [
# 	"console",
# ]

[features]
defualt = ["runtime"]
runtime = []

[[example]]
name = "expanded"

[[example]]
name = "basic"



