[package]
name = "flex_layout"
version = "0.2.2"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "High performance & cross-platform Flexbox implementation"
readme = "README.md"
keywords = ["ios", "android", "cross-platform", "layout", "flexbox"]
categories = ["gui"]
license-file = "LICENSE"

[badges]
circle-ci = { repository = "vislyhq/stretch", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
libm = "0.1.2"
paste = "0.1"
idtree = {path="../idtree"}
dirty = {path="../dirty"}
heap = {path="../../pi_lib/heap"}
map = {path="../map"}
serde = { version = "1.0", features = ["derive"] }
debug_info = {path="../debug_info", features = ["print"] }
slab = {path="../slab"}

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.2"

[profile.release]
lto = true
panic = 'abort'

[[bench]]
name = "generated"
path = "benches/generated/mod.rs"
harness = false

[[bench]]
name = "complex"
harness = false

# [workspace]
# members = [ "scripts/gentest" ]
