[package]
name = "graph"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
hash = { path = "../hash" }
share = { path = "../share" }
map = { path = "../map" }
idtree = { path = "../idtree" }

[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"
env_logger = "0.9"