[package]
name = "graph"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
hash = { path = "../hash" }
share = { path = "../share" }
map = { path = "../map" }
idtree = { path = "../idtree" }
env_logger = "0.9"

[dev-dependencies]
pcg_rand = "0.13"
rand_core = "0.6"
