[package]
name = "pi_handler"
version = "0.1.3"
authors = ["zuon<zuon@yinengyun.com>"]
edition = "2018"
description = "A universal handler utils"
repository = "https://github.com/GaiaWorld/pi_handler"
license = "MIT OR Apache-2.0"
keywords = ["pi", "handler"]

[dependencies]
pi_gray = "0.1"
pi_atom = "0.1"
fnv = "1.0.6"