[package]
name = "js_proxy_gen"
version = "0.3.5"
authors = ["vmos <vmos@fairblock.io>"]
edition = "2018"

[features]
default = []
ts_lower_camel_case = ["heck"]
pid_statistics = []

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
futures = "0.3"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
bytes = "0.5"
num_cpus = "1.13"
lazy_static = '1.4'
heck = { verson = "0.4", optional = true }
dashmap = "4.0"
log = "0.4"
pi_async = "0.5"
pi_async_file = "0.4"
pi_hash = "0.1"
normpath = "0.3"

[dev-dependencies]
env_logger = "0.9"
