[package]
name = "platform"
version = "0.1.0"
authors = ["sun <sun@gmail.com>"]

[dependencies]
wasm-bindgen = { version = "*"}
js-sys = "0.3.44"

[dependencies.web-sys]
version = "0.3.44"
features = [
	"Window",
	"Performance",
]

[features]
defualt = ["native"]
web = []
native = []



