[package]
name = "res"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[dependencies]
slab = { path = "../slab"}
deque = {path = "../deque"}
lru = {path = "../lru"}
any = {path="../any"}
# share_rc = { package = "share", path = "../share", features=["rc"], optional = true }
# share_arc = { package = "share", path = "../share", optional = true }
share = { path = "../share", optional = true}
log="*"
serde = { version = "1.0", features = ["derive"]}

hash = {path="../hash"}
atom = {path="../atom"}

[features]
default = ["share"]
rc = ["share/rc"]



# [dependencies.web-sys]
# version = "*"
# features = [
# 	"console",
# ]
# [features]
# default = []
# rc = ["share/rc"]
