[package]
name = "task_pool"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]

[dependencies]
wtree = {path="../wtree"}
timer = {path="../timer"}
dyn_uint = {path="../dyn_uint"}
fast_deque = {path="../fast_deque"}
slab = {path="../slab"}
time = {path="../time"}
rand = "0.5.4"
flame = "0.2.2"
flamer = "0.3"