[package]
name = "worker"
version = "0.1.0"
authors = ["vmos <vmos@fairblock.io>"]

[dependencies]
fnv = "1.0.6"
rand = "*"
threadpool = "*"
lazy_static = "*"
atom = { path = "../atom" }
apm = { path = "../apm" }
timer = { path = "../timer" }
task_pool = { path = "../task_pool" }
log = "0.4"