[package]
name = "pi_v8_ext"
version = "0.1.0"
authors = ["yineng <yineng@foxmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
num-bigint = "0.4"
num-traits = "0.2"

[dependencies.export_crate]
path = "E:\\rust\\pi_mastser\\crate branch\\pi_lib\\js_proxy_gen\\tests\\export_crate"

[dependencies.vm_builtin]
path = "E:\\rust\\pi_mastser\\crate branch\\pi_lib\\js_proxy_gen\\tests\\pi_v8\\vm_builtin"
